# loopxia-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
api/: loopxia.h  loopxia_event.h  loopxia_log.h  loopxia_math.h  loopxia_ui.h
assets/shaders/: animated_mesh.fs  animated_mesh.vs  mesh.fs  mesh.vs  static_mesh.fs  static_mesh.vs
include/loopxia/: dispatch_queue  dispatch_queue.h  event.h  log.h  loopxia.h  macro.h  math.h  mutex.h  time.h  ui.h
include/loopxia/bounding_volume/: bounding_volume.h
include/loopxia/chrono/: time.h  updatable.h
include/loopxia/editor/: editor.h
include/loopxia/game/: camera_controller.h  game.h  render_manager.h
include/loopxia/graph/: node.h
include/loopxia/input/: keyboard.h
include/loopxia/math/: math.h
include/loopxia/object/: camera.h  gameobject.h  instance_tracker.h  mesh_object.h  movable_object.h  object.h  script.h  scriptable_object.h  transform.h
include/loopxia/render/: mesh.h  mesh_renderer.h  render_buffer.h  renderable.h  renderer.h  shader.h
include/loopxia/resource/: bone.h  material.h  mesh.h  resource.h  resource_group.h  resource_loader.h  resource_manager.h  resource_saver.h  texture.h
include/loopxia/scene/: avatar.h  bone_node.h  camera.h  game_object.h  hexagon_grid.h  scene.h  scene_node.h  scene_renderer.h  scene_transition.h  script.h  scriptable_object.h  transform.h
include/loopxia/scene/component/: camera.h  component.h  component_renderable.h  component_updatable.h  mesh_renderer.h
include/loopxia/ui/: ui.h
loopxia-engine/: CMakeLists.txt  loopxia-engine.cpp  loopxia-engine.h
src/: CMakeLists.txt  log.cpp  loopxia-engine.cpp  loopxia.cpp  mutex.cpp  test.cpp
src/bounding_volume/: bounding_volume.cpp
src/event/: event.cpp  event.h  event_manager.h
src/game/: camera_controller_impl.cpp  camera_controller_impl.h  game.cpp  renderer_manager.cpp
src/math/: math.cpp
src/object/: camera_impl.cpp  camera_impl.h  gameobject.cpp  mesh_object_impl.cpp  mesh_object_impl.h  movable_object_impl.cpp  movable_object_impl.h  object.cpp  scriptable_object.cpp  transform.cpp  transform_impl.cpp  transform_impl.h  transform_manager.h
src/render/: mesh.cpp  mesh_render_setup.h  mesh_renderer_impl.cpp  mesh_renderer_impl.h  mesh_renderer_indirect.cpp  mesh_renderer_indirect.h  mesh_renderer_shader.cpp  mesh_renderer_shader.h  mesh_shader_animated.cpp  mesh_shader_animated.h  mesh_shader_static.cpp  mesh_shader_static.h  render_buffer.cpp  renderer.cpp  shader.cpp
src/resource/: bone_impl.cpp  bone_impl.h  material_impl.cpp  material_impl.h  material_loader_impl.cpp  material_loader_impl.h  mesh.cpp  mesh_impl.cpp  mesh_impl.h  mesh_loader_impl.cpp  mesh_loader_impl.h  resource_group_impl.cpp  resource_group_impl.h  resource_impl.cpp  resource_impl.h  resource_manager_impl.cpp  resource_manager_impl.h
src/scene/: avatar_impl.cpp  avatar_impl.h  bone_node_imp.h  bone_node_impl.cpp  game_object.cpp  scene_impl.cpp  scene_impl.h  scene_node_impl.cpp  scene_node_impl.h  scene_renderer_impl.cpp  scene_renderer_impl.h  scriptable_object.cpp  transform.cpp  transform_impl.cpp  transform_impl.h
src/scene/component/: camera_impl.h  component_impl.cpp  component_impl.h  mesh_renderer.cpp
src/ui/: ui.cpp
